Refactoring checkout signup, pricing, and checkout

--- a/app/challenges/style.styl
+++ b/app/challenges/style.styl
@@ -1,4 +1,20 @@
 .guitar-quest-challenges
+  .guitar-background
+    margin-top -23px
+    margin-bottom -23px
+    // background-position: 0% 25%
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/guitar_5.jpg")
+    background-size: cover
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover
+    background-repeat: no-repeat
+    // height 640px
+    height 350px
+    border-bottom 2px solid #C6C6C6
+    width: 100%
+
+  // background-position: center top
   .challenge-panel
     padding-top 10px
     padding-bottom 10px
