--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -56,7 +56,7 @@
           p.description-text Upload a video performance of the piece. Receive written teacher feedback and earn points for your video.
         .col-md-4
           i.fa.fa-bar-chart.how-it-works-icon.text-success
-          h4 3. Track your progress
+          h4 3. Unlock Higher Levels
           p.description-text Once you earn enough points, you will progress to the next level to unlock new, more challenging pieces to learn.
 
   .landing-page-section
