--- a/app/lesson_checkout/style.styl
+++ b/app/lesson_checkout/style.styl
@@ -4,5 +4,9 @@
   .step
     margin-right 30px
     font-size 18px
+    margin-bottom 2px solid gray
   .current-step
     font-weight 600
+
+  .checkout
+    background-color white
