--- a/app/lessons/style.styl
+++ b/app/lessons/style.styl
@@ -1,5 +1,4 @@
 .guitar-quest-private-lessons
-
   .exp-month
     width 50px
 
@@ -20,3 +19,6 @@
 
   .cards-accepted
     margin-bottom 10px
+
+  .guitarist-photo
+    width 100%
