--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -82,7 +82,7 @@
       //-         i.link-panel-icon.fa.fa-users.fa-3x
       //-       .col-xs-9
       //-         div Need help? Get a private video lesson from one of our teachers?
-      //-         a(ui-sref='guitarQuest.privateLessons')
+      //-         a(ui-sref='guitarQuest.lessons')
       //-           span View Teachers&nbsp;
       //-           span.fa.fa-angle-double-right
 
