--- a/app/sign_up/template.jade
+++ b/app/sign_up/template.jade
@@ -1,5 +1,5 @@
 .guitar-quest-create-account
-  .guitar-background
+  .guitar-background-white
     .container
       .col-xs-12.col-md-4.col-md-offset-4
         .create-account-panel.panel.panel-default
