--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -6,3 +6,17 @@
 
 .loader
   font-size 60px
+
+.guitar-background-white
+  margin-top -23px
+  margin-bottom -23px
+  // background-position: 0% 25%
+  background: url("/guitar_5.jpg")
+  background-size: cover
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover
+  background-repeat: no-repeat
+  height 640px
+  width: 100%
+  // background-position: center top
