--- a/app/log_in/template.jade
+++ b/app/log_in/template.jade
@@ -1,5 +1,5 @@
 .guitar-quest-login
-  .guitar-background
+  .guitar-background-white
     .container
       .col-xs-12.col-md-4.col-md-offset-4
         .login-panel.panel.panel-default
