--- a/app/pricing/style.styl
+++ b/app/pricing/style.styl
@@ -1,4 +1,4 @@
-.guitar-quest-login
+.guitar-quest-pricing
   font-size 15px
   .login-btn
     margin-top 30px
@@ -12,7 +12,14 @@
     color gray
 
   .price-panel
-    padding 15px 25px
+    margin-top 100px
+  //   padding 15px 25px
+
+  .pricing-title
+    margin-bottom 20px
 
   .features
     margin-top 25px
+
+  .professional-panel
+    border 2px solid #FF9800
