Finish restyling checkout page

--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -3,6 +3,7 @@
     margin-top -23px
     margin-bottom -23px
     // background-position: 0% 25%
+    // background: url("/guitar_4.jpg")
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/guitar_4.jpg")
     background-size: cover
     -webkit-background-size: cover;
@@ -10,7 +11,7 @@
     -o-background-size: cover
     background-repeat: no-repeat
     // height 640px
-    height 350px
+    height 410px
     border-bottom 2px solid #C6C6C6
     width: 100%
     // background-position: center top
@@ -29,21 +30,21 @@
 
   .action-btn
     margin-top 10px
-    width 500px
+    width 470px
     font-size 25px
     text-transform none
 
   .landing-page-section
-    padding-top 30px
-    padding-bottom 50px
+    padding-top 27px
+    padding-bottom 27px
 
   .description-text
     color #999999
-    font-size 16px
-    line-height 27px
+    font-size 15px
+    line-height 23px
 
   .how-it-works-icon
-    font-size 75px
+    font-size 55px
     margin-bottom 10px
 
   .details
