--- a/app/lesson_checkout/lesson/style.styl
+++ b/app/lesson_checkout/lesson/style.styl
@@ -12,3 +12,18 @@
 
   .text-faded
     color: #dddddd
+
+  .checkout-title
+    margin-top 5px
+    margin-bottom 15px
+
+  .form-title
+    text-transform uppercase
+    font-weight bold
+
+  .form-section
+    margin-bottom 15px
+
+  .skype-username
+    margin-top 10px
+
