--- a/app/lesson_checkout/payment/style.styl
+++ b/app/lesson_checkout/payment/style.styl
@@ -1,6 +1,24 @@
-.guitar-quest-lesson-checkout
+.lesson-checkout-payment
   .step
     margin-right 30px
     font-size 20px
   .current-step
     font-weight 600
+  .exp-month
+    width 50px
+
+  .exp-year
+    width 100px
+
+  .csv
+    width 90px
+
+  .payment-btn
+    margin-top 25px
+
+  .cards
+    font-size 14px
+
+  .card
+    margin-left 3px
+
