--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -11,7 +11,7 @@
   .jumbotron.guitar-background
     .container
       .row
-        .col-md-12.text-center
+        .col-md-12
           h2.title
             //- Top 2
             //- Learn classical guitar interactively
@@ -37,9 +37,10 @@
             //- Learn classical guitar, interactively
             //- Learn your favorite classical guitar pieces
             //- Master classical guitar - too serious, would probably turn a lot of beginners away
-            div Learn classical guitar by studying great pieces.
+            div Master the great works
+            div of classical guitar.
             //- https://medium.com/backchannel/this-video-game-solved-the-problem-of-learning-guitar-d0fcea6f0d3b#.s2egim8cz
-          a.action-btn.btn.btn-warning.btn-lg(href='' ui-sref='guitarQuest.signUp') Start learning for free
+          a.action-btn.btn.btn-primary.btn-lg(href='' ui-sref='guitarQuest.signUp') Start learning for free
 
   .landing-page-section.background-white
     .container.text-center
@@ -56,7 +57,7 @@
           p.description-text Upload a video performance of the piece. Receive written teacher feedback and earn points for your video.
         .col-md-4
           i.fa.fa-bar-chart.how-it-works-icon.text-success
-          h4 3. Unlock Higher Levels
+          h4 3. Unlock Harder Pieces
           p.description-text Once you earn enough points, you will progress to the next level to unlock new, more challenging pieces to learn.
 
   .landing-page-section
