Restyle the lessons panel

--- a/app/lessons/style.styl
+++ b/app/lessons/style.styl
@@ -21,4 +21,8 @@
     margin-bottom 10px
 
   .guitarist-photo
+    // display inline-block
     width 100%
+
+  // .guitarist-description
+  //   display inline-block
