--- a/app/lessons/template.jade
+++ b/app/lessons/template.jade
@@ -1,14 +1,14 @@
 .guitar-quest-private-lessons.container
   .row
-    .col-md-8.col-md-offset-2
-      .panel.panel-default
-        .panel-body
-          h4
-            span Danny Nelson
-            .pull-right.text-warning $60/hour
-          .row
-            .col-md-4
-              img.guitarist-photo(src='/danny_nelson.jpg')
-            .col-md-8
-              p Hi, my name is Danny Nelson, and I am the founder of GuitarQuest. Gluten-free hammock DIY mlkshk bitters. Cornhole polaroid viral, microdosing waistcoat pitchfork wayfarers stumptown cronut keytar normcore. Selfies tacos messenger bag actually. Pickled slow-carb kinfolk helvetica knausgaard. Four dollar toast four loko mustache, lo-fi intelligentsia cred viral chicharrones helvetica hoodie blog cliche schlitz chartreuse cronut.
+    .col-md-10.col-md-offset-1
+      .panel.panel-default.clearfix
+        .row
+          .col-sm-4
+            img.guitarist-photo(src='/danny_nelson.jpg')
+          .col-sm-8.guitarist-description
+            .panel-body
+              h4
+                span Danny Nelson
+                .pull-right.text-warning $60/hour
+              p Hi, my name is Danny Nelson, and I am the founder of GuitarQuest. Gluten-free hammock DIY mlkshk bitters. Cornhole polaroid viral, microdosing waistcoat pitchfork wayfarers stumptown cronut keytar normcore.
               a.btn.btn-primary(href='' ui-sref='lessonCheckout') Buy a Private Lesson
