Restyle checkout and pricing

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -40,7 +40,7 @@
             div Master the great works
             div of classical guitar.
             //- https://medium.com/backchannel/this-video-game-solved-the-problem-of-learning-guitar-d0fcea6f0d3b#.s2egim8cz
-          a.action-btn.btn.btn-primary.btn-lg(href='' ui-sref='guitarQuest.signUp') Start learning for free
+          a.action-btn.btn.btn-success.btn-lg(href='' ui-sref='guitarQuest.signUp') Start learning for free
 
   .landing-page-section.background-white
     .container.text-center
@@ -56,7 +56,7 @@
           h4 2. Submit a Video
           p.description-text Upload a video performance of the piece. Receive written teacher feedback and earn points for your video.
         .col-md-4
-          i.fa.fa-bar-chart.how-it-works-icon.text-success
+          i.fa.fa-unlock-alt.how-it-works-icon.text-success
           h4 3. Unlock Harder Pieces
           p.description-text Once you earn enough points, you will progress to the next level to unlock new, more challenging pieces to learn.
 
