--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -45,7 +45,7 @@
 
   .how-it-works-icon
     font-size 55px
-    margin-bottom 10px
+    margin-bottom 7px
 
   .details
     color #AD9F9E
@@ -74,3 +74,16 @@
 
   .resource
     margin-bottom 20px
+
+  .circle-around
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    padding: 8px;
+
+    background: #fff;
+    border: 2px solid #666;
+    color: #666;
+    text-align: center;
+
+    font: 32px Arial, sans-serif;
