--- a/app/lesson_checkout/template.jade
+++ b/app/lesson_checkout/template.jade
@@ -3,12 +3,23 @@
   //- .checkout-navbar.text-center
   //-   a GuitarQuest
 
-  //- nav.navbar.navbar-default.navbar-static-top
+  //- nav.navbar.navbar-default.navbar-static-top.navbar-no-margin
   //-   .container
-  //-     .navbar-container.text-center
-  //-       //- .navbar-container
-  //-       .navbar-header
-  //-     a.navbar-brand(ui-sref='guitarQuest.landing') GuitarQuest
+  //-     .navbar-container
+  //-       a.navbar-brand(ui-sref='guitarQuest.landing') GuitarQuest
+  //-       .text-center.steps
+  //-         span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.signUp")}') 1. Sign up
+  //-         span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.lesson")}') 2. Lesson info
+  //-         span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.payment")}') 3. Payment
+  //-         span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.review")}') 4. Review
+
+  .text-center.success-top
+    .checkout-brand GuitarQuest
+    .steps
+      span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.signUp")}') 1. Sign up
+      span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.lesson")}') 2. Lesson info
+      span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.payment")}') 3. Payment
+      span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.review")}') 4. Review
   //- Lesson
     //- (choose a teacher)
     //- choose a lesson length / price
@@ -21,14 +32,14 @@
   //- show summary (lesson price minus credits)
   //- submit
 
-  .checkout-nav.bg-primary
-    .container
-      div.checkout-brand GuitarQuest
-      .text-center.steps
-        span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.signUp")}') 1. Sign up
-        span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.lesson")}') 2. Lesson info
-        span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.payment")}') 3. Payment
-        span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.review")}') 4. Review
+  //- .checkout-nav.bg-primary
+  //-   .container
+  //-     div.checkout-brand GuitarQuest
+  //-     .text-center.steps
+  //-       span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.signUp")}') 1. Sign up
+  //-       span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.lesson")}') 2. Lesson info
+  //-       span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.payment")}') 3. Payment
+  //-       span.step(ng-class='{"current-step": ctrl.stateIncludes("lessonCheckout.review")}') 4. Review
 
   .container
     ui-view
