--- a/app/pricing/style.styl
+++ b/app/pricing/style.styl
@@ -1,25 +1,49 @@
 .guitar-quest-pricing
-  font-size 15px
-  .login-btn
-    margin-top 30px
+  font-size 14px
 
   .login-panel
     margin-top 50px
-
-  .price-panel
 
   .text-faded
     color gray
 
   .price-panel
-    margin-top 100px
+    margin-top 50px
   //   padding 15px 25px
 
   .pricing-title
-    margin-bottom 20px
+    font-size 20px
+    padding-bottom 10px
+    padding-top 10px
+
+  .pricing-price
+    font-size 20px
+    background-color #2196F3
+    color white
+    padding-top 30px
+    padding-bottom 20px
+
+  .pricing-warning
+    font-size 20px
+    background-color #FF9800
+    color white
+    padding-top 30px
+    padding-bottom 20px
+
+  .pricing-dollars
+    font-size: 30px;
+    font-weight: 300;
+
+  .pricing-name
+    font-size: 15px;
+    font-weight: 500;
 
   .features
     margin-top 25px
 
   .professional-panel
     border 2px solid #FF9800
+
+  .divider
+    margin-top 15px
+    margin-bottom 15px
