--- a/app/pricing/template.jade
+++ b/app/pricing/template.jade
@@ -1,22 +1,42 @@
 .guitar-quest-pricing
-  //- .guitar-background-white
-  .container
-    .col-md-4.col-md-offset-2
-      .price-panel.panel.panel-default
-        .panel-body
-          h4.pricing-title
-            span Amateur
-            span.pull-right.text-faded Free
-          div Learn pieces up to <strong>preparatory level</strong>.
-          div Access all learning resources.
-          button.login-btn.btn.btn-primary.btn-block(href='' ui-sref='guitarQuest.creatAccount') Sign up
+  .guitar-background-white
+    .container
+      .col-md-3.col-md-offset-3
+        .price-panel.panel.panel-default.text-center
+          //- .pricing-title
+          //-   div Amateur
+          .pricing-price
+            .pricing-dollars Free
+            .pricing-name Amateur
+          .panel-body
+            div Learn pieces up to the preparatory level.
+            hr.divider
+            div Access all learning resources.
+            hr.divider
+            button.login-btn.btn.btn-primary.btn-block(href='' ui-sref='guitarQuest.creatAccount') Sign up
 
-    .col-md-4
-      .price-panel.panel.panel-default.professional-panel
-        .panel-body
-          h4.pricing-title
-            span Professional
-            span.pull-right.text-warning $35/mo
-          div Learn pieces up to <strong>level 8</strong>.
-          div Access all learning resources.
-          button.login-btn.btn.btn-warning.btn-block(href='' ui-sref='guitarQuest.creatAccount') Sign up
+      .col-md-3
+        .price-panel.panel.panel-default.text-center
+          //- .pricing-title
+          //-   div Amateur
+          .pricing-price.pricing-warning
+            .pricing-dollars $35/mo
+            .pricing-name Professional
+          .panel-body
+            div Learn pieces up to level 8, the highest level.
+            hr.divider
+            div Access all learning resources.
+            hr.divider
+            button.login-btn.btn.btn-warning.btn-block(href='' ui-sref='guitarQuest.creatAccount') Sign up
+
+
+
+    //- .col-md-4
+    //-   .price-panel.panel.panel-default.professional-panel
+    //-     .panel-body
+    //-       h4.pricing-title
+    //-         span Professional
+    //-         span.pull-right.text-warning $35/mo
+    //-       div Learn pieces up to <strong>level 8</strong>.
+    //-       div Access all learning resources.
+    //-       button.login-btn.btn.btn-warning.btn-block(href='' ui-sref='guitarQuest.creatAccount') Sign up
