--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -11,7 +11,7 @@
   margin-top -23px
   margin-bottom -23px
   // background-position: 0% 25%
-  background: url("/guitar_3.jpg")
+  background: url("/guitar_5.jpg")
   background-size: cover
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -20,3 +20,8 @@
   height 640px
   width: 100%
   // background-position: center top
+
+.btn
+  font-weight 500
+  -webkit-box-shadow: 1px 1px 4px rgba(0,0,0,0.1);
+  box-shadow: 1px 1px 4px rgba(0,0,0,0.1);
