Sketch our subscribe checkout flow

--- a/app/pricing/template.jade
+++ b/app/pricing/template.jade
@@ -9,7 +9,7 @@
             .pricing-dollars Free
             .pricing-name Amateur
           .panel-body
-            div Learn pieces up to the preparatory level.
+            div Learn guitar pieces up to the preparatory level.
             hr.divider
             div Access all learning resources.
             hr.divider
@@ -23,7 +23,7 @@
             .pricing-dollars $35/mo
             .pricing-name Professional
           .panel-body
-            div Learn pieces up to level 8, the highest level.
+            div Learn guitar pieces up to level 8, the highest level.
             hr.divider
             div Access all learning resources.
             hr.divider
