--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -21,7 +21,30 @@
   width: 100%
   // background-position: center top
 
+.guitar-background-full
+  // background-position: 0% 25%
+  background: url("/guitar_5.jpg")
+  background-size: cover
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover
+  background-repeat: no-repeat
+  height 750px
+  width: 100%
+  // background-position: center top
+
 .btn
   font-weight 500
   -webkit-box-shadow: 1px 1px 4px rgba(0,0,0,0.1);
   box-shadow: 1px 1px 4px rgba(0,0,0,0.1);
+
+.input-row
+  margin-bottom 5px
+
+.btn-flat
+  color #2196F3
+  text-transform uppercase
+  cursor pointer
+  font-weight 500
+  font-size 13px
+
