--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -41,6 +41,11 @@
 .input-row
   margin-bottom 5px
 
+.input-helper-text
+  color #A7A7A7
+  font-size 12px
+  margin-top 2px
+
 .btn-flat
   color #2196F3
   text-transform uppercase
