--- a/app/subscribe_checkout/style.styl
+++ b/app/subscribe_checkout/style.styl
@@ -52,5 +52,8 @@
       margin-left: -13px;
     }
 
+  .panel-footer-white
+    background-color white
+
   // .checkout
   //   background-color white
