Make site mobile friendly, and save payment information to user during checkout

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -12,7 +12,7 @@
     .container
       .row
         .col-md-12
-          h2.title
+          h2.title Master the great works of classical guitar.
             //- Top 2
             //- Learn classical guitar interactively
             //- Learn classical guitar by studying great pieces
@@ -37,10 +37,9 @@
             //- Learn classical guitar, interactively
             //- Learn your favorite classical guitar pieces
             //- Master classical guitar - too serious, would probably turn a lot of beginners away
-            div Master the great works
-            div of classical guitar.
+
             //- https://medium.com/backchannel/this-video-game-solved-the-problem-of-learning-guitar-d0fcea6f0d3b#.s2egim8cz
-          a.action-btn.btn.btn-success.btn-lg(href='' ui-sref='guitarQuest.signUp') Start learning for free
+          a.action-btn.btn.btn-warning.btn-lg(href='' ui-sref='guitarQuest.signUp') Start learning for free
 
   .landing-page-section.background-white
     .container.text-center
