--- a/app/subscribe_checkout/payment/template.jade
+++ b/app/subscribe_checkout/payment/template.jade
@@ -8,6 +8,7 @@
         .panel-heading
           .panel-title Payment Info
         .panel-body
+          alert(ng-if='ctrl.error' type='danger' close='ctrl.error = null') {{ctrl.error}}
           .clearfix
             .pull-left All major credit cards accepted.
             .pull-right
