--- a/app/subscribe_checkout/style.styl
+++ b/app/subscribe_checkout/style.styl
@@ -18,6 +18,8 @@
     margin-right 35px
     margin-left 30px
     display inline-block
+    &:hover
+      text-decoration none
     // position absolute
     // top 7px
     // left 15px
