--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -12,6 +12,7 @@
   margin-bottom -23px
   // background-position: 0% 25%
   background: url("/guitar_5.jpg")
+  background-position: center center
   background-size: cover
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -25,6 +26,7 @@
   // background-position: 0% 25%
   background: url("/guitar_5.jpg")
   background-size: cover
+  background-position: center center
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover
@@ -52,4 +54,3 @@
   cursor pointer
   font-weight 500
   font-size 13px
-
