--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -17,7 +17,8 @@
     // background-position: center top
 
   .title
-    font-weight 500
+    font-weight 400
+    max-width: 470px
     character-spacing -1px
     margin-top 30px
     margin-bottom 40px
@@ -31,6 +32,7 @@
   .action-btn
     margin-top 10px
     width 470px
+    max-width 100%
     font-size 25px
     text-transform none
 
