--- a/app/lessons/template.jade
+++ b/app/lessons/template.jade
@@ -1,6 +1,6 @@
 .guitar-quest-private-lessons.container
   .row
-    .col-md-10.col-md-offset-1
+    .col-sm-10.col-sm-offset-1
       .panel.panel-default.clearfix
         .row
           .col-sm-4
