--- a/app/sign_up/template.jade
+++ b/app/sign_up/template.jade
@@ -1,14 +1,15 @@
 .guitar-quest-create-account
   .guitar-background-white
     .container
-      .col-xs-12.col-md-4.col-md-offset-4
-        .create-account-panel.panel.panel-default
-          .panel-body
-            h4.text-center.title Sign up for free
-            alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
-            form(ng-submit='ctrl.register()')
-              input.form-control(id='firstName' type='text' placeholder='first name' ng-model='ctrl.form.firstName')
-              input.form-control(id='lastName' type='text' placeholder='last name' ng-model='ctrl.form.lastName')
-              input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
-              input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
-              button.create-account-btn.btn.btn-primary.btn-block(type='submit') Sign up
+      .row
+        .col-sm-6.col-sm-offset-3.col-lg-4.col-lg-offset-4
+          .create-account-panel.panel.panel-default
+            .panel-body
+              h4.text-center.title Sign up for free
+              alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
+              form(ng-submit='ctrl.register()')
+                input.form-control(id='firstName' type='text' placeholder='first name' ng-model='ctrl.form.firstName')
+                input.form-control(id='lastName' type='text' placeholder='last name' ng-model='ctrl.form.lastName')
+                input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
+                input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
+                button.create-account-btn.btn.btn-primary.btn-block(type='submit') Sign up
