--- a/app/subscribe_checkout/sign_up/style.styl
+++ b/app/subscribe_checkout/sign_up/style.styl
@@ -1,4 +1,4 @@
-.subscribe-checkout-payment
+.subscribe-checkout-sign-up
   .step
     margin-right 30px
     font-size 20px
@@ -17,3 +17,16 @@
   .panel-footer-white
     background-color white
 
+  .panel-header-btn
+    display inline-block
+    font-size 13px
+    text-transform uppercase
+    font-weight 500
+    width 50%
+    padding 10px
+    cursor pointer
+    background-color #FBFBFB
+
+  .panel-header-btn-active
+    background-color #2196f3
+    color white
