--- a/local_modules/directives/gq_sign_up_form/template.jade
+++ b/local_modules/directives/gq_sign_up_form/template.jade
@@ -1,6 +1,8 @@
 .gq-sign-up-form
+  alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
   form(ng-submit='ctrl.submit()')
     input.form-control(id='firstName' type='text' placeholder='first name' ng-model='ctrl.form.firstName')
     input.form-control(id='lastName' type='text' placeholder='last name' ng-model='ctrl.form.lastName')
     input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
     input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
+    .input-helper-text 8 characters minimum
